# wordclock24h

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Makefile  README-CMAKE.md  README.md
ESP8266/ESP-uclock/: APP-BUNDLE.md  ESP-uclock.ino  README-PWA.md  base.h  eepromdata.h  http.cpp  vars.cpp  vars.h  version.h
ESP8266/ESP-uclock/data/: app-bundle.txt
ESP8266/ESP-uclock/data/app/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
ESP8266/ESP-uclock/tools/: build-app-bundle.py  release-app-bundle.sh
cmake/: toolchain-arm-none-eabi.cmake
mock-pwa/: manifest.webmanifest  sw.js
src/: main.c  main.h
src/base/: base.c
src/display/: display.c  display.h
src/esp8266/: esp8266.c  esp8266.h
src/log/: log.c
src/sk6812/: sk6812.c
src/timeserver/: timeserver.c
src/vars/: vars.c
src/weather/: weather.c
